# url-shortener-rs

./: .env  .gitignore  Cargo.toml  storage.db  storage.db-shm  storage.db-wal
config/: local.toml
src/: config.rs  error.rs  gen_alias.rs  lib.rs  main.rs  telemetry.rs
src/server/: mod.rs
src/server/handlers/: mod.rs  redirect.rs  url.rs
src/storage/: mod.rs  sqlite.rs
